# timelapse_portrait

./: .gitignore  CLAUDE.md  README.md  align_faces.ipynb  align_faces.py  align_faces_refactored.ipynb  capture_issues.txt  config.yaml  metadata.json  needs_to_be_renamed.txt  pyproject.toml  rectangle_mapping.json  requirements.txt  script_failures.txt
src/: __init__.py  annotator.py  average_image.py  face_aligner.py  image_processor.py  metadata_manager.py  video_generator.py
